DSE-592 Fix password field covered by other elements in small screens

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -26,5 +26,5 @@ body {
 }
 
 html, body, #root, #root > div {
-  height: 100%;
+  min-height: 100%;
 }
